manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kepviewer
  name: kepviewer
spec:
  ports:
  - port: 80
  selector:
    app: kepviewer
